<?xml version="1.0"?>
<package format="3">
  <name>py_serial_commander</name>
  <version>0.0.0</version>
  <description>Python serial commander node</description>
  <maintainer email="ktobgui@gmail.com">tobgui</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- Tell colcon to treat this as a Python package -->
  <build_type>ament_python</build_type>
</package>

